--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,11 +7,21 @@
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center;
             background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /*
+            shorthand - backgroud color > image > position > repeat > size > attachment
+           */
+
+           background: black url('imagens/wallpaper002.jpg') center no-repeat fixed;
+           background-size: cover;
         }
 
         main {
