--- a/d012/index.html
+++ b/d012/index.html
@@ -85,10 +85,10 @@
            Felizmente, pra orar <br>
            Não precide internet <br>
            Deus escuta todo mundo <br>
-                    Se quiser, faça <br> esse teste
-                    Dois pontos são dois joelhos
-                    Seus lábios são aparelhos
-                    Deixe que Deuinterprete.
+                    Se quiser, faça  esse teste <br>
+                    Dois pontos são dois joelhos<br>
+                    Seus lábios são aparelhos <br>
+                    Deixe que Deuinterprete. <br>
       </p>
         </section>
 
