--- a/d012/index.html
+++ b/d012/index.html
@@ -21,7 +21,8 @@
             Mensagem curta e fria <br>
             Twitter e Facebook <br>
             Antes que eu caduque <br>
-            Vou dizer tudo em poesia.
+            Vou dizer tudo em poesia. <br>
+
         </p>
     </section>
 
@@ -35,7 +36,7 @@
             O "O" e o "E" foi riscado <br>
             Para declarar o amor <br>
             Basta botar uma flor <br>
-            E um coração desenhado.
+            E um coração desenhado. <br>
         </p>
     </section>
 
@@ -53,22 +54,22 @@
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
-            Ponto e vírgula e um  <br>asterisco
+            Ponto e vírgula e um  <br>
             Um beijo significa <br>
             Pra entender como fica <br>
-            Decifre esse rabisco.
+            Decifre esse rabisco. <br>
         </p>
     </section>
 
         <section>
             <p>
-                Tenho saudade das  <br>cartas
-                    Escritas com a  <br>própria mão
-                    Mandava no mês de  <br>Junho
-                    Só chegava no  <br>Verão
-                    Mas matava a  <br>saudade
-                    Era texto de  <br>verdade
-                    Nas linhas do coração.
+                Tenho saudade das  <br>
+                    Escritas com a  <br>
+                    Mandava no mês de  <br>
+                    Só chegava no  <br>
+                    Mas matava a  <br>
+                    Era texto de  <br>
+                    Nas linhas do coração. <br>
             </p>
         </section>
 
