--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -56,6 +56,35 @@
                 <td>Rio de Janeiro</td>
                 <td>17 264 943</td>
             </tr>
+
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.873.864</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.433.957</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11.377.239</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.557.071</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.132.078</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.602.865</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7.164.788</td>
+             </tr>
         </tbody>
 
         <tfoot>
