--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -85,6 +85,25 @@
                 <td>Santa Catarina</td>
                 <td class="num">7.164.788</td>
              </tr>
+             <tr>
+                <td>Maranhão</td>
+                <td>7.075.181</td>
+             </tr>
+             <tr>
+                <td>Goiás</td>
+                <td>7.018.354</td>
+             </tr>
+             <tr>
+                <td>Amazonas</td>
+                <td>4.144.597</td>
+             </tr>
+             <tr>
+                <td>Espíto Santo</td>
+                <td>4.018.650</td>
+             </tr>
+             <tr>
+                
+             </tr>
         </tbody>
 
         <tfoot>
