--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -102,7 +102,56 @@
                 <td>4.018.650</td>
              </tr>
              <tr>
-                
+                <td>Paraba</td>
+                <td>4.018.127</td>
+             </tr>
+             <tr>
+                <td>Rio Grande do Norte</td>
+                <td>3.506.853</td>
+             </tr>
+             <tr>
+                <td>Mato Grosso</td>
+                <td>3.484.466</td>
+             </tr>
+             <tr>
+                <td>Alagoas</td>
+                <td>3.337.357</td>
+             </tr>
+             <tr>
+                <td>Piauí</td>
+                <td>3.273.227</td>
+             </tr>
+             <tr>
+                <td>Distrito Federal</td>
+                <td>3.015.268</td>
+             </tr>
+             <tr>
+                <td>Mato Grosso do Sul</td>
+                <td>2.778.986</td>
+             </tr>
+             <tr>
+                <td>Sergipe</td>
+                <td>2.298.696</td>
+             </tr>
+             <tr>
+                <td>Rondônia</td>
+                <td>1.777.225</td>
+             </tr>
+             <tr>
+                <td>Tocantins</td>
+                <td>1.572.866</td>
+             </tr>
+             <tr>
+                <td>Acre</td>
+                <td>881.731</td>
+             </tr>
+             <tr>
+                <td>Amapá</td>
+                <td>845.731</td>
+             </tr>
+             <tr>
+                <td>Roraima</td>
+                <td>605.761</td>
              </tr>
         </tbody>
 
