--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -24,6 +24,10 @@
             background-color: gray;
             color: white;
          }
+
+         td.num {
+            text-align: right;
+         }
     </style>
 </head>
 <body>
@@ -46,15 +50,15 @@
         <tbody>
             <tr>
             <td>São Paulo</td>
-            <td>45 919 049</td>
+            <td class="num ">45 919 049</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>21 168 791</td>
+                <td class="num">21 168 791</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>17 264 943</td>
+                <td class="num">17 264 943</td>
             </tr>
 
             <tr>
@@ -87,78 +91,79 @@
              </tr>
              <tr>
                 <td>Maranhão</td>
-                <td>7.075.181</td>
+                <td class="num">7.075.181</td>
              </tr>
              <tr>
                 <td>Goiás</td>
-                <td>7.018.354</td>
+                <td class="num">7.018.354</td>
              </tr>
              <tr>
                 <td>Amazonas</td>
-                <td>4.144.597</td>
+                <td class="num">4.144.597</td>
              </tr>
              <tr>
                 <td>Espíto Santo</td>
-                <td>4.018.650</td>
+                <td class="num">4.018.650</td>
              </tr>
              <tr>
                 <td>Paraba</td>
-                <td>4.018.127</td>
+                <td class="num">4.018.127</td>
              </tr>
              <tr>
                 <td>Rio Grande do Norte</td>
-                <td>3.506.853</td>
+                <td class="num">3.506.853</td>
              </tr>
              <tr>
                 <td>Mato Grosso</td>
-                <td>3.484.466</td>
+                <td class="num">3.484.466</td>
              </tr>
              <tr>
                 <td>Alagoas</td>
-                <td>3.337.357</td>
+                <td class="num">3.337.357</td>
              </tr>
              <tr>
                 <td>Piauí</td>
-                <td>3.273.227</td>
+                <td class="num">3.273.227</td>
              </tr>
              <tr>
                 <td>Distrito Federal</td>
-                <td>3.015.268</td>
+                <td class="num">3.015.268</td>
              </tr>
              <tr>
                 <td>Mato Grosso do Sul</td>
-                <td>2.778.986</td>
+                <td class="num">2.778.986</td>
              </tr>
              <tr>
                 <td>Sergipe</td>
-                <td>2.298.696</td>
+                <td class="num">2.298.696</td>
              </tr>
              <tr>
                 <td>Rondônia</td>
-                <td>1.777.225</td>
+                <td class="num">1.777.225</td>
              </tr>
              <tr>
                 <td>Tocantins</td>
-                <td>1.572.866</td>
+                <td class="num">1.572.866</td>
              </tr>
              <tr>
                 <td>Acre</td>
-                <td>881.731</td>
+                <td class="num">881.731</td>
              </tr>
              <tr>
                 <td>Amapá</td>
-                <td>845.731</td>
+                <td class="num">845.731</td>
              </tr>
              <tr>
                 <td>Roraima</td>
-                <td>605.761</td>
+                <td class="num">605.761</td>
              </tr>
         </tbody>
 
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
-                <td>0000</td>
+                <td class="num"><strong>210.147.125</strong></td>
+
             </tr>
         </tfoot>
     </table>
