--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -20,6 +20,13 @@
             
          }
 
+         caption {
+          font-size: 1.5em;
+          font-weight: bold;
+          padding: 10px;
+          background-color: lightgray;
+         }
+
          thead, tfoot {
             background-color: gray;
             color: white;
@@ -34,6 +41,7 @@
     <h1>Uso de tabela </h1>
     <!--ANATOMIA PARA TABELA GRANDES TABLE
     THEAD
+      CAPTION
         TR, TD, TH
     TBODY
         TR, TD, TH
@@ -42,9 +50,10 @@
     -->
 
     <table>
+      <caption>Populaçao das Unidades Federativas</caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">População</th>
         </thead>
 
         <tbody>
@@ -161,7 +170,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
 
             </tr>
