--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -15,7 +15,7 @@
          }
 
          td, th {
-            border: 1px solid black;
+            border: 1px solid rgb(0, 0, 0);
             padding: 10px;
             
          }
@@ -28,8 +28,16 @@
          }
 
          thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
+         }
+
+         tbody > tr:nth-child(odd){ /* 2n-1 */
+            background-color: white;
+         }
+
+         tbody > tr:nth-child(2n) { /* 2n */
+            background-color: lightgray;
          }
 
          td.num {
