colocando posicionamento de tabela

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
          table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
          }
 
          td, th {
@@ -30,6 +31,12 @@
          thead, tfoot {
             background-color: #383838;
             color: white;
+         }
+
+         thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: #383838;
          }
 
          tbody > tr:nth-child(odd){ /* 2n-1 */
@@ -184,5 +191,15 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores corrupti est, eaque eligendi blanditiis error optio aut non doloribus in minima, culpa iusto. Repellendus voluptate consequuntur suscipit fuga Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nesciunt iusto magni, error quo nobis reprehenderit iure repellat aliquid cupiditate tempora, ad cum! Commodi beatae excepturi rem illo eius corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis tempore consequatur aliquid nihil, suscipit voluptas repudiandae, recusandae sit nam ex eaque magni possimus rem illo quidem voluptatem dolorem excepturi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, consequuntur. Maiores ipsum sapiente magnam quisquam culpa, quos dolorum reprehenderit delectus. Vero in ducimus temporibus placeat molestias vel, minima ad eveniet.</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores corrupti est, eaque eligendi blanditiis error optio aut non doloribus in minima, culpa iusto. Repellendus voluptate consequuntur suscipit fuga Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nesciunt iusto magni, error quo nobis reprehenderit iure repellat aliquid cupiditate tempora, ad cum! Commodi beatae excepturi rem illo eius corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis tempore consequatur aliquid nihil, suscipit voluptas repudiandae, recusandae sit nam ex eaque magni possimus rem illo quidem voluptatem dolorem excepturi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, consequuntur. Maiores ipsum sapiente magnam quisquam culpa, quos dolorum reprehenderit delectus. Vero in ducimus temporibus placeat molestias vel, minima ad eveniet.</p>
+
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores corrupti est, eaque eligendi blanditiis error optio aut non doloribus in minima, culpa iusto. Repellendus voluptate consequuntur suscipit fuga Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nesciunt iusto magni, error quo nobis reprehenderit iure repellat aliquid cupiditate tempora, ad cum! Commodi beatae excepturi rem illo eius corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis tempore consequatur aliquid nihil, suscipit voluptas repudiandae, recusandae sit nam ex eaque magni possimus rem illo quidem voluptatem dolorem excepturi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, consequuntur. Maiores ipsum sapiente magnam quisquam culpa, quos dolorum reprehenderit delectus. Vero in ducimus temporibus placeat molestias vel, minima ad eveniet.</p> 
+
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores corrupti est, eaque eligendi blanditiis error optio aut non doloribus in minima, culpa iusto. Repellendus voluptate consequuntur suscipit fuga Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nesciunt iusto magni, error quo nobis reprehenderit iure repellat aliquid cupiditate tempora, ad cum! Commodi beatae excepturi rem illo eius corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis tempore consequatur aliquid nihil, suscipit voluptas repudiandae, recusandae sit nam ex eaque magni possimus rem illo quidem voluptatem dolorem excepturi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, consequuntur. Maiores ipsum sapiente magnam quisquam culpa, quos dolorum reprehenderit delectus. Vero in ducimus temporibus placeat molestias vel, minima ad eveniet.</p>
+
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum asperiores corrupti est, eaque eligendi blanditiis error optio aut non doloribus in minima, culpa iusto. Repellendus voluptate consequuntur suscipit fuga Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci nesciunt iusto magni, error quo nobis reprehenderit iure repellat aliquid cupiditate tempora, ad cum! Commodi beatae excepturi rem illo eius corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis tempore consequatur aliquid nihil, suscipit voluptas repudiandae, recusandae sit nam ex eaque magni possimus rem illo quidem voluptatem dolorem excepturi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, consequuntur. Maiores ipsum sapiente magnam quisquam culpa, quos dolorum reprehenderit delectus. Vero in ducimus temporibus placeat molestias vel, minima ad eveniet.</p>
+
 </body>
 </html>
